<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="meet_eat.app.fragment.main.offer.OfferEditFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgFragment">

        <ImageButton
            android:id="@+id/ibtBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:elevation="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_back"
            android:tint="@color/bgButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description_back_button" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibtBack">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- OFFER IMAGE -->
                <ImageView
                    android:id="@+id/ivOfferEditPicture"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:adjustViewBounds="true"
                    android:elevation="1dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/offer_card"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/content_description_offer_image" />

                <!-- OFFER IMAGE -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:adjustViewBounds="true"
                    android:elevation="2dp"
                    android:src="@color/colorPrimary"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/ivOfferEditPicture"
                    android:contentDescription="@string/content_description_spacer" />

                <!-- OFFER IMAGE -->
                <TextView
                    android:id="@+id/tvOfferEditPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_tag"
                    android:elevation="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/picture"
                    android:textAlignment="center"
                    android:textColor="@color/textHint"
                    android:textSize="30sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/ivOfferEditPicture"
                    app:layout_constraintEnd_toEndOf="@+id/ivOfferEditPicture"
                    app:layout_constraintStart_toStartOf="@+id/ivOfferEditPicture"
                    app:layout_constraintTop_toTopOf="@+id/ivOfferEditPicture" />

                <!-- OFFER IMAGE -->
                <ImageButton
                    android:id="@+id/ibtOfferEditEditPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="16dp"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    android:elevation="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/edit"
                    android:tint="@color/symbol"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/ivOfferEditPicture"
                    app:layout_constraintEnd_toEndOf="@+id/ivOfferEditPicture"
                    app:layout_constraintStart_toStartOf="@+id/ivOfferEditPicture"
                    app:layout_constraintTop_toTopOf="@+id/ivOfferEditPicture"
                    android:contentDescription="@string/content_description_offer_image_edit_button" />

                <EditText
                    android:id="@+id/etOfferEditTitle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints=""
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.title}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    app:layout_constraintTop_toBottomOf="@+id/ivOfferEditPicture"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:id="@+id/tvOfferEditDate"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:clickable="true"
                    android:elevation="5dp"
                    android:hint="@string/date_time"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/etOfferEditPrice"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etOfferEditTitle" />

                <EditText
                    android:id="@+id/etOfferEditCity"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints="postalAddress"
                    android:background="@drawable/bg_edit_text"
                    android:clickable="true"
                    android:elevation="5dp"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.city}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/etOfferEditParticipants"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvOfferEditDate" />

                <EditText
                    android:id="@+id/etOfferEditPrice"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints=""
                    android:background="@drawable/bg_edit_text"
                    android:clickable="true"
                    android:elevation="5dp"
                    android:hint="@{@string/price.concat(@string/whitespace).concat(@string/currency)}"
                    android:inputType="numberDecimal"
                    android:maxLength="9"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.priceString}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etOfferEditTitle" />

                <EditText
                    android:id="@+id/etOfferEditParticipants"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints=""
                    android:background="@drawable/bg_edit_text"
                    android:clickable="true"
                    android:elevation="5dp"
                    android:hint="@string/participants"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.participantsString}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etOfferEditPrice" />

                <EditText
                    android:id="@+id/etOfferEditDescription"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="16dp"
                    android:autofillHints=""
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
                    android:gravity="top|start"
                    android:hint="@string/offer_description"
                    android:inputType="textMultiLine"
                    android:maxLength="300"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.description}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etOfferEditCity" />

                <!-- TAG -->
                <Button
                    android:id="@+id/btOfferEditAddTag"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_tag"
                    android:elevation="5dp"
                    android:text="@string/add_tag"
                    android:textColor="@color/textHint"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etOfferEditDescription" />

                <Button
                    android:id="@+id/btOfferEditPublish"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_button"
                    android:elevation="5dp"
                    android:text="@string/publish"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etOfferEditDescription" />

                <Button
                    android:id="@+id/btOfferEditSave"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_button"
                    android:elevation="5dp"
                    android:text="@string/save"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btOfferEditDelete"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etOfferEditDescription" />

                <Button
                    android:id="@+id/btOfferEditDelete"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_button"
                    android:elevation="5dp"
                    android:text="@string/delete_offer"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btOfferEditSave"
                    app:layout_constraintTop_toBottomOf="@+id/etOfferEditDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>