...
    <string name="notification">Notification</string>
    <string name="sort_spinner_item_amount_participants">Amount of participants</string>
    <string name="login">Login</string>
    <string name="title">Offer title</string>
    <string name="picture">offer image</string>
    <string name="offer_description">Offer description</string>
    <string name="request_sent">Request sent.</string>
    <string name="change_password">Change</string>
    <string name="passwords_matching">New password should not be the old password.</string>
    <string name="invalid_old_password">Old password incorrect.</string>
    <string name="old_password">Old password</string>
    <string name="bad_passwords">Old or new password invalid.</string>
    <string name="profile_user_age">Age:</string>
...
